--- a/views/addProperty.pug
+++ b/views/addProperty.pug
@@ -170,17 +170,37 @@ html(lang='en')
                                         div#picArea4.dropzone
                                             .dz-message.text-muted
                                                 p Add Picture 4
-                                            //- if(property.displayImage4 != null)
-                                            //- a(href=property.displayImage4 style=(property.displayImage4 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
-                                                img#displayImage4.img-fluid(src=property.displayImage4  alt='...')
-                                            //- else
-                                            //- .dz-message.text-muted(style=(property.displayImage4 == null ? "" : "display:none"))
-                                                p Add Image 4
                                         label.btn.btn-primary(for="picture4" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 4
                                         input(id="picture4" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=4)
-                                        //- if(property.displayImage4)
-                                        //- button.btn.btn-outline-primary(id="removeDisplayImage4" style=( property.displayImage ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=4) Remove Picture
                                         p.small.text-danger(id="picture4Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent5
+                                        div#picArea5.dropzone
+                                            .dz-message.text-muted
+                                                p Add Picture 5
+                                        label.btn.btn-primary(for="picture5" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 5
+                                        input(id="picture5" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=5)
+                                        p.small.text-danger(id="picture5Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent6
+                                        div#picArea6.dropzone
+                                            .dz-message.text-muted
+                                                p Add Picture 6
+                                        label.btn.btn-primary(for="picture6" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 6
+                                        input(id="picture6" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=6)
+                                        p.small.text-danger(id="picture6Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent7
+                                        div#picArea7.dropzone
+                                            .dz-message.text-muted
+                                                p Add Picture 7
+                                        label.btn.btn-primary(for="picture7" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 7
+                                        input(id="picture7" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=7)
+                                        p.small.text-danger(id="picture7Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent8
+                                        div#picArea8.dropzone
+                                            .dz-message.text-muted
+                                                p Add Picture 8
+                                        label.btn.btn-primary(for="picture8" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 8
+                                        input(id="picture8" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=8)
+                                        p.small.text-danger(id="picture8Error" style="text-align:center")
                         .row.form-block
                             .col-lg-12
                                 h5.mb-4 Calendar Sync
