--- a/views/adminProperty.pug
+++ b/views/adminProperty.pug
@@ -3,8 +3,12 @@ html(lang='en')
     include common/header.pug 
     +head("Admin Property")
     body(style='padding-top: 72px;')
+        #overlay
         include common/navbar.pug 
         +navbar(user)
+        .progress.rounded-0.sticky-top#progressBar(style='height: 10px; top: 72px;display:none')
+            .progress-bar#progress(role='progressbar' style='width: 0%' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100')
+    
         section.py-5
             input(id="property" style="display:none" value=property)
                       
@@ -134,43 +138,78 @@ html(lang='en')
                                         label.btn.btn-primary(for="picture1" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Main Picture
                                         input(id="picture1" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=1)
                                         p.small.text-danger(id="picture1Error" style="text-align:center")
-                                    .col-lg-3.col-6.px-1.mb-2
+                                    .col-lg-3.col-6.px-1.mb-2#picParent2
                                         div#picArea2.dropzone
-                                            if(property.displayImage2 != null)
-                                                a(href=property.displayImage2 data-fancybox='gallery' title='Outside')
-                                                    img#displayImage2.img-fluid(src=property.displayImage2  alt='...')
-                                            else
+                                            a(href=property.displayImage2 style=(property.displayImage2 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage2.img-fluid(src=property.displayImage2  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage2 == null ? "" : "display:none"))
                                                 p Add Image 2
                                         label.btn.btn-primary(for="picture2" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 2
                                         input(id="picture2" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=2)
-                                        if(property.displayImage2)
-                                            button.btn.btn-outline-primary(id="removeDisplayImage2" style="width:100%;font-size:8pt !important;" data-index=2) Remove Picture
+                                        button.btn.btn-outline-primary(id="removeDisplayImage2" style=( property.displayImage2 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=2) Remove Picture
                                         p.small.text-danger(id="picture2Error" style="text-align:center")
-                                    .col-lg-3.col-6.px-1.mb-2
+                                    .col-lg-3.col-6.px-1.mb-2#picParent3
                                         div#picArea3.dropzone
-                                            if(property.displayImage3 != null)
-                                                a(href=property.displayImage3 data-fancybox='gallery' title='Outside')
-                                                    img#displayImage3.img-fluid(src=property.displayImage3  alt='...')
-                                            else
+                                            a(href=property.displayImage3 style=(property.displayImage3 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage3.img-fluid(src=property.displayImage3  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage3 == null ? "" : "display:none"))
                                                 p Add Image 3
                                         label.btn.btn-primary(for="picture3" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 3
                                         input(id="picture3" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=3)
-                                        if(property.displayImage3)
-                                            button.btn.btn-outline-primary(id="removeDisplayImage3" style="width:100%;font-size:8pt !important;" data-index=3) Remove Picture
+                                        button.btn.btn-outline-primary(id="removeDisplayImage3" style=( property.displayImage3 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=3) Remove Picture
                                         p.small.text-danger(id="picture3Error" style="text-align:center")
                                     .col-lg-3.col-6.px-1.mb-2#picParent4
                                         div#picArea4.dropzone
-                                            //- if(property.displayImage4 != null)
                                             a(href=property.displayImage4 style=(property.displayImage4 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
                                                 img#displayImage4.img-fluid(src=property.displayImage4  alt='...')
-                                            //- else
                                             .dz-message.text-muted(style=(property.displayImage4 == null ? "" : "display:none"))
                                                 p Add Image 4
                                         label.btn.btn-primary(for="picture4" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 4
                                         input(id="picture4" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=4)
-                                        //- if(property.displayImage4)
-                                        button.btn.btn-outline-primary(id="removeDisplayImage4" style=( property.displayImage ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=4) Remove Picture
+                                        button.btn.btn-outline-primary(id="removeDisplayImage4" style=( property.displayImage4 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=4) Remove Picture
                                         p.small.text-danger(id="picture4Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent5
+                                        div#picArea5.dropzone
+                                            a(href=property.displayImage5 style=(property.displayImage5 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage5.img-fluid(src=property.displayImage5  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage5 == null ? "" : "display:none"))
+                                                p Add Image 5
+                                        label.btn.btn-primary(for="picture5" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 5
+                                        input(id="picture5" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=5)
+                                        button.btn.btn-outline-primary(id="removeDisplayImage5" style=( property.displayImage5 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=5) Remove Picture
+                                        p.small.text-danger(id="picture5Error" style="text-align:center")
+                                    .col-lg-3.col-6.px-1.mb-2#picParent6
+                                        div#picArea6.dropzone
+                                            a(href=property.displayImage6 style=(property.displayImage6 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage6.img-fluid(src=property.displayImage6  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage6 == null ? "" : "display:none"))
+                                                p Add Image 6
+                                        label.btn.btn-primary(for="picture6" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 6
+                                        input(id="picture6" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=6)
+                                        button.btn.btn-outline-primary(id="removeDisplayImage6" style=( property.displayImage6 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=6) Remove Picture
+                                        p.small.text-danger(id="picture6Error" style="text-align:center")
+
+                                    .col-lg-3.col-6.px-1.mb-2#picParent7
+                                        div#picArea7.dropzone
+                                            a(href=property.displayImage7 style=(property.displayImage7 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage7.img-fluid(src=property.displayImage7  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage7 == null ? "" : "display:none"))
+                                                p Add Image 7
+                                        label.btn.btn-primary(for="picture7" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 7
+                                        input(id="picture7" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=7)
+                                        button.btn.btn-outline-primary(id="removeDisplayImage7" style=( property.displayImage7 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=7) Remove Picture
+                                        p.small.text-danger(id="picture7Error" style="text-align:center")
+
+                                    .col-lg-3.col-6.px-1.mb-2#picParent8
+                                        div#picArea8.dropzone
+                                            a(href=property.displayImage8 style=(property.displayImage8 != null ? "" : "display:none") data-fancybox='gallery' title='Outside')
+                                                img#displayImage8.img-fluid(src=property.displayImage8  alt='...')
+                                            .dz-message.text-muted(style=(property.displayImage8 == null ? "" : "display:none"))
+                                                p Add Image 8
+                                        label.btn.btn-primary(for="picture8" style="margin-top:10px;width:100%;font-size:8pt !important;cursor:pointer;") Picture 8
+                                        input(id="picture8" type='file' style="opacity:0;width:-webkit-fill-available" accept="image/x-png,image/jpeg" data-index=8)
+                                        button.btn.btn-outline-primary(id="removeDisplayImage8" style=( property.displayImage8 ? "width:100%;font-size:8pt !important;" : "width:100%;font-size:8pt !important;display:none") data-index=8) Remove Picture
+                                        p.small.text-danger(id="picture8Error" style="text-align:center")
                         .row.form-block
                             .col-lg-12
                                 h5.mb-4 Calendar Sync
