--- a/views/placeOrder.pug
+++ b/views/placeOrder.pug
@@ -55,7 +55,7 @@ html(lang='en')
             .text-block
               h5.mb-4 Things to keep in mind
               ul.list-unstyled
-                li.mb-2
+                //- li.mb-2
                   .d-flex.align-items-center.mb-3
                     .icon-rounded.icon-rounded-sm.bg-secondary-light.flex-shrink-0.me-4
                       i.fa.fas.fa-child.text-secondary.fa-fw.text-center
@@ -116,8 +116,8 @@ html(lang='en')
               .card-footer.bg-primary-light.py-4.border-0
                 .d-flex.align-items-center
                   div
-                    h6.text-primary Flexible – free cancellation
-                    p.text-sm.text-primary.opacity-8.mb-0
+                    h6 Flexible – free cancellation
+                    p.text-sm.opacity-8.mb-0
                       | Cancel within 48 hours of booking to get a full refund. 
                       a.text-reset.ms-3(href='#') More details
             .text-block
