--- a/views/_pug-includes/inc-booking-cards.pug
+++ b/views/_pug-includes/inc-booking-cards.pug
@@ -39,4 +39,4 @@
         .d-flex.align-items-center
             div
                 h6.text-primary Flexible – free cancellation
-                p.text-sm.text-primary.opacity-8.mb-0 Cancel within 48 hours of booking to get a full refund. <a href="#" class="text-reset ms-3">More details</a>
+                p.text-sm.text-primary.opacity-8.mb-0 Cancel within 48 hours of booking and it is before the booking date and time to get a full refund.  <a href="#" class="text-reset ms-3">More details</a>
