--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -57,8 +57,8 @@ mixin navbar()
                   .dropdown-menu.dropdown-menu-end(aria-labelledby='userDropdownMenuLink')
                       a.dropdown-item(href='/myAccount') My Account
                       .dropdown-divider
-                      a.dropdown-item(href='#myProfile') My Profile
-                      .dropdown-divider
+                      //- a.dropdown-item(href='#myProfile') My Profile
+                      //- .dropdown-divider
                       a.dropdown-item(href='/logout')
                           i.fas.fa-sign-out-alt.me-2.text-muted
                           |  Log out
