--- a/views/placeOrder.pug
+++ b/views/placeOrder.pug
@@ -118,7 +118,7 @@ html(lang='en')
                   div
                     h6 Flexible – free cancellation
                     p.text-sm.opacity-8.mb-0
-                      | Cancel within 48 hours of booking to get a full refund. 
+                      | Cancel within 48 hours of booking and it is before the booking date and time to get a full refund. 
                       a.text-reset.ms-3(href='#') More details
             .text-block
                 
